Also try booting from NVMe drives

--- a/memdisk_src/boot/grub/grub.cfg
+++ b/memdisk_src/boot/grub/grub.cfg
@@ -58,6 +58,18 @@ function try_user_config {
 	done
 }
 
+function search_grub_nvme {
+	for i in 0 1 2 3; do
+		# first namespace is good enough for most drives
+		try_user_config "(nvme${i}n1)"
+
+		# MBR/GPT partitions
+		for part in 1 2 3 4 5; do
+			try_user_config "(nvme${i}n1,${part})"
+		done
+	done
+}
+
 function search_grub {
 	# Copied from the Libreboot Project, then slightly modified
 
@@ -80,6 +92,7 @@ set timeout=2
 
 ## Load user grub.cfg from disk
 menuentry 'Load grub.cfg from HDD/DVD' {
+	search_grub_nvme
 	search_grub ahci
 }
 
